# Further

./: .env.example  .gitignore  KNOWN_ISSUES.md  README.md  docker-compose.yml  further_data  pyproject.toml
agentsociety2/: .dockerignore  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  env_main_commons_tragedy_v2.py  env_main_endowment_effect.py  env_main_implicit_association_test.py  env_main_prisoners_dilemma_v2.py  env_main_public_goods_v2.py  env_main_self_enhancement.py  env_main_self_reference_effect.py  env_main_trust_game_v2.py  env_main_volunteer_dilemma_v2.py  instruction_final.yaml  instruction_test.yaml  instructions_complete.yaml  main_lab.py  profiles.json  pyproject.toml
agentsociety2/agentsociety2/: __init__.py
agentsociety2/agentsociety2/agent/: __init__.py  base.py  donothing.py  person.py  world_sim_agent.py
agentsociety2/agentsociety2/backend/: API_REFERENCE.md  README.md  __init__.py  app.py  models.py  run.py
agentsociety2/agentsociety2/backend/routers/: __init__.py  custom.py  events.py  experiments.py  graph.py  health.py  interactions.py  modules.py  prefill_params.py  replay.py  reports.py  simulations.py  worlds.py
agentsociety2/agentsociety2/backend/services/: __init__.py  graph_service.py  interaction_service.py  module_loader_service.py  module_router_builder.py  report_service.py  simulation_service.py  world_builder_service.py
agentsociety2/agentsociety2/code_executor/: __init__.py  api.py  code_executor.py  code_generator.py  code_saver.py  dependency_detector.py  docker_runner.py  local_executor.py  models.py  path_config.py  runtime_config.py
agentsociety2/agentsociety2/config/: __init__.py  config.py  list_models.py
agentsociety2/agentsociety2/contrib/agent/: __init__.py  commons_tragedy_agent.py  llm_donor_agent.py  prisoners_dilemma_agent.py  public_goods_agent.py  (+2 more)
agentsociety2/agentsociety2/custom/: README.md  __init__.py
agentsociety2/agentsociety2/designer/: README_LITERATURE_SEARCH.md  __init__.py  config_builder.py  exp_designer.py  exp_pipeline.py
agentsociety2/agentsociety2/env/: __init__.py  base.py  benchmark.py  function_parser.py  pydantic_collector.py  router_base.py  router_plan_execute.py  router_react.py  router_search_tool.py  router_two_tier_plan_execute.py  router_two_tier_react.py  router_world.py
agentsociety2/agentsociety2/graph/: __init__.py  chunker.py  graph_builder.py  graphiti_space.py
agentsociety2/agentsociety2/logger/: __init__.py
agentsociety2/agentsociety2/registry/: __init__.py  base.py  models.py  modules.py
agentsociety2/agentsociety2/skills/: __init__.py
agentsociety2/agentsociety2/society/: __init__.py  cli.py  helper.py  models.py  society.py  workspace.py
agentsociety2/agentsociety2/storage/: __init__.py  models.py  replay_writer.py  table_schema.py  world_tables.py
agentsociety2/agentsociety2/world/: __init__.py  actor_selector.py  extraction.py  graph_builder.py  interaction.py  models.py  persona_builder.py  prompts.py  report_agent.py  repository.py  seed_ingest.py  simulation_engine.py  simulation_init_builder.py  world_state.py
agentsociety2/configs/: README.md
agentsociety2/configs/lab/: instruction_final.yaml  instruction_test.yaml  instructions_complete.yaml  profiles.json
agentsociety2/docs/: .readthedocs.yaml  Makefile  agents.rst  cli.rst  concepts.rst  conf.py  contributing.rst  custom_modules.rst  development.rst  env_modules.rst  examples.rst  index.rst  installation.rst  interaction.rst  llm_world_modular_router_migration.md  llm_world_router_implementation_plan.md  module_and_parameter_management.md  progress_2026-04-05_worldstate_router_simulation.md  quickstart.rst  requirements.txt  skills.rst  storage.rst
agentsociety2/docs/plans/: CUSTOM_MODULES_PLAN.md  README.md
agentsociety2/examples/: __init__.py  build_world_from_text.py  chat_with_world_agent.py  run_world_simulation.py
agentsociety2/examples/advanced/: 01_custom_agent.py  02_multi_router.py
agentsociety2/examples/basics/: 01_hello_agent.py  02_custom_env_module.py  03_replay_system.py
agentsociety2/examples/games/: 01_prisoners_dilemma.py  02_public_goods.py  reputation_game.py
agentsociety2/experiments/: README.md
agentsociety2/experiments/legacy/: env_main_commons_tragedy_v2.py  env_main_endowment_effect.py  env_main_implicit_association_test.py  env_main_prisoners_dilemma_v2.py  env_main_public_goods_v2.py  env_main_self_enhancement.py  env_main_self_reference_effect.py  env_main_trust_game_v2.py  env_main_volunteer_dilemma_v2.py  main_lab.py
(+153 files in other folders)
